--- a/style/index.css
+++ b/style/index.css
@@ -1,9 +1,9 @@
 @import url('base.css');
 @import url('header.css');
 @import url('select.css');
-@import url('tabs.css');
 @import url('search.css');
 @import url('footer.css');
+@import url('media.css');
 
 
 
