--- a/style/search.css
+++ b/style/search.css
@@ -1,9 +1,57 @@
+.tabs-header {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    column-gap: 5px;
+}
+.tabs-header-item {
+    padding: 10px;
+    border-radius: 14px;
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: 0.01em;
+    color: #911016;
+    cursor: pointer;
+}
+.tabs-header-item.active {
+    color: #fff;
+    background: #911016;
+}
+.card-list {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    margin: 115px 0;
+}
+.card-item {
+    width: 100%;
+}
+.card-link {
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+}
+.card-img {
+    width: 100%;
+    border-radius: 10px;
+    object-fit: cover;
+}
+.card-title {
+    font-weight: 500;
+    font-size: 23px;
+    line-height: 150%;
+    letter-spacing: 0.02em;
+    color: #364670;
+}
 .search-box {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
     column-gap: 24px;
+    row-gap: 16px;
     height: 70px;
+    margin: 17px 0;
 }
 .search-input-wrapper {
     position: relative;
@@ -52,10 +100,10 @@
 .search-results li:hover {
     background: #f1f1f5;
 }
-.search-box {
-    margin: 17px 0;
-}
 .search-box button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 23px 61px;
     background: #911016;
     border-radius: 14px;
@@ -73,7 +121,9 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    width: 100%;
     column-gap: 16px;
+    row-gap: 16px;
     flex-wrap: wrap;
 }
 .tags-item {
