--- a/style/select.css
+++ b/style/select.css
@@ -5,19 +5,17 @@
     background: #ffffff;
     min-width: 188px;
 }
-
-
 .login select {
-    display: none; /*hide original SELECT element:*/
+    display: none;
 }
-
-/*.login > .select-items:not(.select-hide) {*/
 .login:not(:has(>.select-items.select-hide)) {
     border-radius: 16px 16px 0 0;
 }
-
-
 .select-selected {
+    display: flex;
+    justify-content: space-between;
+    column-gap: 16px;
+    position: relative;
     padding: 12px 16px;
     border-radius: 16px;
     background-color: #ffffff;
@@ -26,39 +24,15 @@
     letter-spacing: 0.01em;
     color: #364670;
 }
-
-/*style the arrow inside the select element:*/
-.select-selected:after {
-    position: absolute;
-    content: "";
-    top: 14px;
-    right: 10px;
-    width: 0;
-    height: 0;
-    border: 6px solid transparent;
-    border-color: #364670 transparent transparent transparent;
-}
-
-/*point the arrow upwards when the select box is open (active):*/
-.select-selected.select-arrow-active:after {
-    border-color: transparent transparent #364670 transparent;
-    top: 7px;
-}
-
-/*style the items (options), including the selected item:*/
 .select-items div,.select-selected {
     cursor: pointer;
     user-select: none;
 }
-
-/*style items (options):*/
 .select-items {
     position: absolute;
     display: flex;
     flex-direction: column;
-    /*row-gap: 12px;*/
     border-radius: 0 0 16px 16px;
-    /*padding: 12px 16px;*/
     background-color: #ffffff;
     top: 100%;
     left: 0;
@@ -73,14 +47,33 @@
 .select-items:not(.select-hide) + .select-selected {
     border-radius: 16px 16px 0 0;
 }
-
-/*hide the items when the select box is closed:*/
 .select-hide {
     display: none;
 }
-
 .select-items div:hover, .same-as-selected {
-    /*background-color: rgba(0, 0, 0, 0.1);*/
     background-color: #911016;
     color: #ffffff;
+}
+.select-item {
+    display: flex;
+    align-items: center;
+    column-gap: 8px;
+}
+.select-item-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    background-color: #A68144;
+}
+.select-item-image img {
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
